--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.3"
   },
   "scripts": {
@@ -40,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@types/draft-js": "^0.11.9"
+    "@types/draft-js": "^0.11.9",
+    "@types/styled-components": "^5.1.25"
   }
 }
